--- a/src/index.css
+++ b/src/index.css
@@ -609,6 +609,10 @@ html, body {
   margin-left: 4.7vw;
   width: 156%;
 }
+.logo-footer img {
+  margin-left: -11.3vw;
+  margin-top: 1vw;
+}
 
 .title {
   font-size: 1.6vw;
@@ -689,9 +693,10 @@ html, body {
   position: absolute;
   left: 0;
   top: 0;
-  height: auto;
-  margin-top: -593px;
-  margin-left: -623px;
+  width: 91.32vw;
+  height: 91.32vw;
+  margin-top: -41.5vw;
+  margin-left: -44.15vw;
   z-index: 1;
 }
 
@@ -1054,6 +1059,26 @@ html, body {
   height: 2.1%;
   z-index: 4;
 }
+.bottle-float-left.example-tree5 {
+  position: absolute;
+  margin-top: -8.95vw;
+  margin-left: 27.33vw;
+  width: 6.53vw;
+  height: 7.08vw;
+  z-index: 4;
+  animation: sbs-231425214-52151 15s infinite linear;
+  backface-visibility: hidden;
+}
+.bottle-float-left.example-tree6 {
+  position: absolute;
+  margin-top: 18.05vw;
+  margin-left: -48.67vw;
+  width: 3.47vw;
+  height: 3.82vw;
+  z-index: 4;
+  animation: sbs-231425214 15s infinite linear;
+  backface-visibility: hidden;
+}
 .bottle-float-left.berry-prizes {
   position: absolute;
   margin-top: 2.95vw;
@@ -1066,8 +1091,8 @@ html, body {
   position: absolute;
   margin-top: 3.03vw;
   margin-left: -46.57vw;
-  width: 21.9%;
-  height: 1.5%;
+  width: 21.81vw;
+  height: 5.07vw;
   z-index: 6;
 
 }
@@ -1898,35 +1923,108 @@ html, body {
   font-size: 2vw;
   justify-content: space-between;
   align-items: center;
-  margin-top: 5.3vw;
-  padding-top: 5.46vw;
+  margin-top: -2.7vw;
+  padding-top: 2.46vw;
   padding-bottom: 5.5vw;
-  /*background-color: #007E36;*/
+}
+
+.left-footer {
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 1.25vw;
+  line-height: 1.53vw;
+  color: rgba(245, 245, 237, 1);
+  width: 28.06vw;
+  text-align: left;
+  margin-right: auto;
+  margin-left: 11vw;
+  margin-top: -3vw;
+}
+
+.right-footer {
+  margin: -15.7vw 5vw 0vw 0vw;
+  font-family: 'Acrom Medium', AutumnSweaterLaimon, sans-serif;
+  font-weight: 400;
+  font-size: 3.47vw;
+  line-height: 4.31vw;
+  color: rgba(245, 245, 237, 1);
+  width: 50%;
+  text-align: center;
+  margin-left: auto;
+}
+.footer-padding-text {
+  margin-top: 2vw;
+}
+
+.buttons {
+  margin-top: -2vw;
+  padding-bottom: 5vw;
+}
+.buttons button {
+  margin-right: 10px;
+}
+.footer-left-button {
+  font-size: 1.25vw;
+  font-family: Inter;
+  line-height: 1.53vw;
+  font-weight: 400;
+  width: 22.57vw;
+  height: 4.58vw;
+  border-radius: 0.97vw;
+  color: white;
+  background-color: #286043;
+  border: 1px solid white;
+}
+.footer-right-button {
+  font-size: 1.39vw;
+  font-family: Inter;
+  font-weight: 400;
+  line-height: 1.94vw;
+  width: 15.21vw;
+  height: 4.72vw;
+  border-radius: 0.97vw;
+  background-color:rgba(162, 212, 65, 1);
+  border: 1px;
+}
+.footer-left-button,
+.footer-right-button {
+  transition: background-color 0.3s, color 0.3s; /* Добавляем плавный переход для изменения цвета */
+  cursor: pointer; /* Изменяем форму курсора на указатель при наведении */
+}
+
+.footer-left-button:hover {
+  background-color: #0f5132; /* Изменяем цвет фона при наведении */
+  color: #ffffff; /* Изменяем цвет текста при наведении */
+}
+
+.footer-right-button:hover {
+  background-color: rgba(162, 212, 65, 0.8); /* Изменяем цвет фона при наведении */
+  color: #ffffff; /* Изменяем цвет текста при наведении */
 }
 
 
 @keyframes chaotic-movement {
-  0% {
-    transform: translate(0, 0) rotate(0deg);
-  }
-  25% {
-    transform: translate(10px, -10px) rotate(10deg);
-  }
-  50% {
-    transform: translate(-10px, 10px) rotate(-10deg);
-  }
-  75% {
-    transform: translate(10px, 10px) rotate(-20deg);
-  }
-  100% {
-    transform: translate(0, 0) rotate(0deg);
-  }
+0% {
+  transform: translate(0, 0) rotate(0deg);
+}
+25% {
+  transform: translate(10px, -10px) rotate(10deg);
+}
+50% {
+  transform: translate(-10px, 10px) rotate(-10deg);
+}
+75% {
+  transform: translate(10px, 10px) rotate(-20deg);
+}
+100% {
+  transform: translate(0, 0) rotate(0deg);
+}
 }
 
 
 .image {
-  animation: chaotic-movement 15s infinite linear;
-  backface-visibility: hidden;
+animation: chaotic-movement 15s infinite linear;
+backface-visibility: hidden;
 }
 /* PRODUCTS********************************** */
 .products {
@@ -2234,6 +2332,7 @@ html, body {
   color: rgba(0, 98, 65, 1);
 }
 .for-slider {
+  z-index: 5;
   width: 38vw;
   font-size: 3.47vw;
   text-transform: none;
@@ -2485,6 +2584,23 @@ html, body {
   text-decoration: none;
   margin: 0 auto; /* Добавлено */
 }
+.winners-all.example-all {
+  background-color: rgba(0, 98, 65, 1);
+  border: .07vw solid #ffffff4d;
+  border-radius: 1.04vw 1.04vw 0.35vw 1.04vw;
+  font-family: Halvar Mittelschrift Rg, sans-serif;
+  font-size: 1.17vw;
+  font-weight: 400;
+  height: 4.03vw;
+  justify-content: flex-start;
+  margin-left: 0.2vw;
+  margin-top: 1.352083vw;
+  text-align: center;
+  width: 85.35vw;
+  display: flex;
+  align-items: center;
+  margin-bottom: 2vw;
+}
 .colm-text {
   text-transform: uppercase;
 }
@@ -2702,7 +2818,7 @@ html, body {
 input[type="text"] {
   font-family: Inter;
   width: 28.56vw;
-  height: 4.8vw;
+  height: 4.1vw;
   border: 0.14vw solid red;
   border-radius: 3.68vw;
   padding: 0.35vw;
