--- a/src/index.css
+++ b/src/index.css
@@ -1059,6 +1059,14 @@ html, body {
   height: 2.1%;
   z-index: 4;
 }
+.bottle-float-left.treepape-footer {
+  position: absolute;
+  margin-top: -9.45vw;
+  margin-left: 48.5vw;
+  width: 13%;
+  height: 3%;
+  z-index: 4;
+}
 .bottle-float-left.example-tree5 {
   position: absolute;
   margin-top: -8.95vw;
@@ -2422,6 +2430,8 @@ backface-visibility: hidden;
   z-index: 1;
 }
 .table-body-winners {
+  position: relative;
+  z-index: 5;
   background-color: rgba(245, 245, 237, 0.7);
   border: .07vw solid #ffffff4d;
   border-radius: 1.04vw 1.04vw 0.35vw 1.04vw;
