--- a/src/index.css
+++ b/src/index.css
@@ -1001,7 +1001,7 @@ html, body {
   border-radius: 100%;
   width: 100%;
   height: 15.63vw;
-  background: rgba(91, 171, 113, 1);
+  background: #a3d441;
   left: -25%;
   top: -12.50vw;
 }
