--- a/src/index.css
+++ b/src/index.css
@@ -1125,6 +1125,30 @@ html, body {
   z-index: 5;
   right: 0;
 }
+.bottle-float-left.exit-lc {
+  margin: -4vw 0vw 0vw 35vw;
+  position: absolute;
+  width: 3.40vw;
+  height: 3.40vw;
+  z-index: 5;
+  transition: opacity 0.3s ease; /* добавляем плавную анимацию для свойства opacity */
+}
+.bottle-float-left.exit-lc:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+.exit-lc-text {
+  position: absolute;
+  margin: 0vw 0vw 0vw 15.4vw;
+  position: absolute;
+  z-index: 5;
+  font-size: 1.39vw;
+  line-height: 1.67vw;
+  font-weight: 400;
+  text-transform: none;
+  font-family: Inter;
+  color: rgba(0, 98, 65, 1);
+}
 .bigline-container {
   flex: 0;
   padding: 0 0 0 0;
@@ -2026,7 +2050,7 @@ html, body {
 
 }
 .slider-search-winnersall {
-  padding: 0.89vw 1vw 0.89vw 1vw;
+  padding: 0.89vw 0.6vw 0.89vw 0.6vw;
   margin: 0vw 0vw 0vw 0vw;
   border-radius: 1.04vw;
   color: white;
@@ -2842,6 +2866,7 @@ backface-visibility: hidden;
   color: rgba(255, 255, 255, 1);
 }
 .winners-text.lc {
+
   z-index: 5;
   width: 50vw;
   margin-top: 8.5vw;
@@ -2852,7 +2877,7 @@ backface-visibility: hidden;
   line-height: 4.31vw;
   color: #EEF3EC;
   font-family: 'AutumnSweaterLaimon', Arial, sans-serif;
-  text-align: left;
+  text-align: center;
   color: rgba(255, 255, 255, 1);
 }
 .winners-main.left {
@@ -2886,7 +2911,7 @@ backface-visibility: hidden;
 }
 .for-faq.lc {
   color: rgba(0, 98, 65, 1);
-  margin-left: 30.5vw;
+  margin-left: 25.5vw;
   margin-top: 3.4vw;
 }
 .for-slider {
